--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.5"
   }
 }
