--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "crypto-js": "^4.2.0",
     "express": "^5.1.0",
     "file-type": "^21.0.0",
