--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "saraha_app_backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "start:dev": "node --watch src/.",
-    "start:local": "node --env-file=config/local.env --watch src/."
+    "start:dev": "node --watch ./src/index.js",
+    "start:local": "node --env-file=config/.env.local --watch ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "file-type": "^21.0.0",
     "joi": "^18.0.0",
