--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
+    "start": "node ./src/index.js",
     "start:dev": "node --watch ./src/index.js",
     "start:local": "node --env-file=config/.env.local --watch ./src/index.js"
+  },
+  "engines": {
+    "node": "22.11.0"
   },
   "keywords": [],
   "author": "",
